<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:background="@drawable/rect_white_rad_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textColor="@color/black_two"
                android:textSize="@dimen/setting_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_description_margin_top"
                android:text="@string/names_android"
                android:textColor="@color/black_two"
                android:textSize="@dimen/setting_description_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_title_margin_top"
                android:text="@string/design"
                android:textColor="@color/black_two"
                android:textSize="@dimen/setting_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_description_margin_top"
                android:text="@string/names_design"
                android:textColor="@color/black_two"
                android:textSize="@dimen/setting_description_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_title_margin_top"
                android:text="@string/server"
                android:textColor="@color/black_two"
                android:textSize="@dimen/setting_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_description_margin_top"
                android:text="@string/names_server"
                android:textColor="@color/black_two"
                android:textSize="@dimen/setting_description_size" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="16dp"
            android:src="@drawable/ic_expand_close" />

    </RelativeLayout>
</FrameLayout>
