<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_delete">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="93dp"
        android:layout_marginTop="33dp"
        android:textColor="@color/greyish_brown"
        android:text="@string/delete_diary"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:id="@+id/diaryDeleteCancelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greyish_brown"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/diaryDeleteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/red_two"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>