<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordFragment">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/rounded_corner_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/arrowBackImageViewContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrowBackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/ic_arrow_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18.5dp"
        android:text="@string/forgot_pasword"
        android:textColor="@color/black_two"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowBackImageViewContainer" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/id"
        android:textColor="@color/greyish_brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/forgotPasswordTextView"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_id"
        android:inputType="textEmailAddress"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black_two"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/idTextView"
        app:layout_constraintTop_toBottomOf="@+id/idTextView" />

    <TextView
        android:id="@+id/checkIdWarningTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_id"
        android:textColor="@color/coral"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/idEditText"
        app:layout_constraintTop_toBottomOf="@+id/idEditText"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/email"
        android:textColor="@color/greyish_brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/idEditText"
        app:layout_constraintTop_toBottomOf="@id/idEditText"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/example_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black_two"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/checkEmailWarningTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_email"
        android:textColor="@color/coral"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:visibility="visible" />

    <Button
        android:id="@+id/requestVerificationNumberButton"
        android:layout_width="328dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_corner_silver_button"
        android:letterSpacing="-0.05"
        android:lineSpacingExtra="8sp"
        android:stateListAnimator="@null"
        android:text="@string/request_verification_number"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="328dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_corner_silver_button"
        android:letterSpacing="-0.05"
        android:lineSpacingExtra="8sp"
        android:stateListAnimator="@null"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>