<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_diary_empty"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/dark_sky_blue_five"
            android:text="@string/empty_mention"/>
    </LinearLayout>
    <Button
        android:id="@+id/listDiaryConstellationBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/watch_constellation"/>
    <Button
        android:id="@+id/listDiaryDiaryBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_rounded"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/edit_diary"/>

</LinearLayout>