<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mashup.telltostar.ui.login.forgotpassword.ForgotPasswordViewModel" />

        <variable
            name="fragment"
            type="com.mashup.telltostar.ui.login.forgotpassword.ResetPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.forgotpassword.ResetPasswordFragment">

        <TextView
            android:id="@+id/resetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reset_password"
            android:textColor="@color/black_two"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/new_password"
            android:textColor="@color/greyish_brown"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/resetPasswordTextView"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordTextView" />

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/input_password"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/black_two"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/newPasswordTextView"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordTextView" />

        <TextView
            android:id="@+id/checkPasswordWarningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:textColor="@color/coral"
            android:textSize="12sp"
            android:visibility="@{viewModel.isPasswordEmptyWarningVisibleObservable ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="@+id/newPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/passwordConfirmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/reinput_password"
            android:textColor="@color/greyish_brown"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/newPasswordEditText"
            app:layout_constraintTop_toBottomOf="@id/newPasswordEditText"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/input_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/black_two"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/passwordConfirmTextView"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmTextView" />

        <TextView
            android:id="@+id/checkPasswordConfirmWarningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_identical_password"
            android:textColor="@color/coral"
            android:textSize="12sp"
            android:visibility="@{viewModel.isPasswordNotIdenticalWarningVisibleObservable ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="@+id/passwordConfirmEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText"
            tools:visibility="visible" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="328dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_corner_navy_button"
            android:letterSpacing="-0.05"
            android:lineSpacingExtra="8sp"
            android:onClick="@{fragment::performLoginButtonClick}"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>